src/App.css
/* ... */
/* Socials ------------------------------------------------------------------ */

.socials {
  position: fixed;
  bottom: 0;
  right: 3rem;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
  height: 60vh;
  z-index: 4;
  gap: 0.7rem;

}

.social {
  display: flex;
  justify-content: center;
  align-items: center;
  color: var(--light-gold);
  font-size: 2rem;
  width: 3rem;
  height: 3rem;
  border-radius: 100%;
  transition: 0.3s;
  padding: 0.5rem;
}

.social:hover {
  border-radius: 100%;
  border: 2px solid var(--light-gold);
  cursor: pointer;
}

.social--svg {
  width: 2rem;
  height: 2rem;
} 

.socials--trail {
  width: 1px;
  flex-grow: 1;
  background-color: var(--light-gold);
}

@media ( max-width: 950px ){

  .social--svg {
    width: 1.5rem;
    height: 1.5rem;
  }

  .socials {
    right: 2rem;
    height: 40vh;
    gap: 0.5rem;
  
  }

}

@media ( max-width: 650px ){


  .socials {
    right: 1rem;
    height: 40vh;
    gap: 0.5rem;
  
  }

}

/* contact form ------------------------------------------------------------- */

.contact--form--container {
  position: fixed;
  z-index: 10;
  height: 100vh;
  width: 100%;
  background-color: hsla(0, 0%, 0%, 40%);
  color: var(--light-gold);
  display: flex;
  justify-content: center;
  align-items: center;
  transition: 0.5s;
}

.contact--form--container--hidden {
  transform: translateX(-100%);
}

.contact--form {
  position: relative;
  height: 80%;
  width: 70%;
  background-color: hsla(0, 0%, 0%, 80%);
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
  border-radius: 0.5rem;
}

.contact--form--exit--btn {
  position: absolute;
  top: 0.5rem;
  right: 0.5rem;
  height: 2.7rem;
  width: 2.7rem;
  color: var(--light-gold);
  font-size: 3rem;
  background-color: hsla(0, 0%, 0%, 0%);
  display: flex;
  justify-content: center;
  align-items: center;
  transition: transform 0.3s;
  cursor: pointer;
}

.contact--form--exit--btn::after {
  position: absolute;
  content: "\00d7";
  display: inline-block;
}

.contact--form--exit--btn:hover {
  transform: scale(0.8);
}

.contact--form--title {
  font-family: 'Maven Pro', sans-serif;
  font-size: 2.5rem;
}

.text--input {
  display: block;
  width: 70%;
  height: 2.2rem;
  border: none;
  border-radius: 0.3rem;
  padding: 0.5rem;
  font-size: 1.2rem;
  font-family: 'Comfortaa', cursive;
}

.text--input:focus {
  outline-width: 0;
  box-shadow: 0px 0px 5px 3px hsl(231, 75%, 70%);
}

.contact--form--message {
  display: block;
  width: 70%;
  height: 6rem;
  border-radius: 0.3rem;
  font-family: 'Comfortaa', cursive;
  font-size: 1.2rem;
  padding: 0.5rem;
}

.contact--form--message:focus {
  outline-width: 0;
  box-shadow: 0px 0px 5px 3px hsl(231, 75%, 70%);
}

.contact--form--send--btn {
  background-color: var(--blue-1);
  border-radius: 0.5rem;
  border: 2px solid var(--light-gold);
  color: var(--light-gold);
  font-size: 1.2rem;
  padding: 0.5rem 1.2rem;
  font-weight: bold;
  transition: background-color color 0.3s;
  cursor: pointer;
}

.contact--form--send--btn:hover {
  background-color: var(--light-gold);
  color: var(--blue-1);
}

@media(max-width: 750px){
  .contact--form {
    height: 90%;
    width: 100%;
  }
  
  .contact--form--title {
    font-family: 'Maven Pro', sans-serif;
    font-size: 1.8rem;
    margin-top: 2rem;
  }
  
  .text--input {
    font-size: 1rem;
  }
  
  .contact--form--message {
    font-size: 1rem;
  }
}

/* welcome section ---------------------------------------------------------- */

.welcome {
  margin-top: 0px;
  height: 100vh;
  display: flex;
  flex-direction: column;
  gap: 1rem;
  justify-content: center;
  align-items: center;
  text-align: center;
  padding: 0rem 5rem;

}

.hi {
  font-size: 1rem;
}

.hi2 {
  font-size: 1rem;
  margin-bottom: 1rem;
}

.name {
  font-size: 6rem;
  font-family: 'Permanent Marker', cursive;
}

.job-title {
  font-size: 3rem;
  padding: 0rem 2rem;
}

/* media queries */

@media (max-width: 1050px){

  .welcome {
    gap: 2rem;
  }

  .name {
    font-size: 5rem;
    line-height: 1;
  }

  .hi {
    font-size: 0.9rem;
  }
  
  .hi2 {
    font-size: o.9rem;
  }

  .job-title {
    font-size: 2.5rem;
  }

}

@media (max-width: 450px ) {

  .welcome {
    padding: 0rem 3rem;
  }

  .name {
    font-size: 3.5rem;
  }

  .hi {
    font-size: 0.7rem;
  }
  
  .hi2 {
    font-size: 0.7rem;
  }

  .job-title {
    font-size: 1.6rem;
  }
}

@media(max-width: 350px){
  .welcome {
    padding: 0rem 2rem;
    margin-bottom: 3rem;
  }

  .name {
    font-size: 3rem;
  }

  .hi {
    font-size: 0.6rem;
  }
  
  .hi2 {
    font-size: 0.6rem;
  }

  .job-title {
    font-size: 1.4rem;
  }
}

/* about section ---------------------------------------------------------- */

.about {
  height: 100vh;
  text-align: left;
  color: var(--light-gold);
  background-color: var(--blue-1);
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 0rem 10rem;
  position: relative;

}

.about--content {
  display: flex;
  height: 60%;
  justify-content: center;
  align-items: center;
  position: relative;
}

.about--background {
  color: hsla(0, 0%, 50%, 10%);
  position: absolute;
  z-index: 1;
  font-size: 10rem;
  font-weight: bolder;

  left: 0;
}

.about--text {
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: center;
  padding: 1rem;
  width: 50%;
  height: 100%;
  
  line-height: 1.6;
}

.about--title {
  font-family: 'Maven Pro', sans-serif;
  position: relative;
  z-index: 1;
  font-size: 3rem;
  padding: 1rem;
  margin: 0;
}

.about--description {
  color: hsl(0, 0%, 70%);
  position: relative;
  z-index: 1;
  font-size: 1.3rem;
  padding: 1rem;
}

.about--description p {
  margin-top: 0.9rem;
  margin-bottom: 0.9rem;
}
/* ... */

